[FIX] RibbonMenu: hint the scrollable menu
Currently, it is not quite clear that the ribbon menu can be scrolled as
the scrollbars are not displayed by default on a mobile browser (or on
some desktop browsers like firefox).

This revision adds some style that will hint the possibility to scroll
either to the bottom or top of the menu depending on the current
scrolling value.

closes odoo/o-spreadsheet#7316

Task: 5106796

--- a/src/components/small_bottom_bar/ribbon_menu/ribbon_menu.css
+++ b/src/components/small_bottom_bar/ribbon_menu/ribbon_menu.css
@@ -10,6 +10,26 @@
   }
   .o-ribbon-menu-wrapper {
     max-height: 100%;
+
+    &.scroll-top::before {
+      width: 100%;
+      height: 15px;
+      content: "";
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), transparent);
+      position: absolute;
+      pointer-events: none;
+    }
+
+    &.scroll-bottom::after {
+      width: 100%;
+      height: 15px;
+      content: "";
+      background: linear-gradient(to top, rgba(0, 0, 0, 0.2), transparent);
+      position: absolute;
+      pointer-events: none;
+      z-index: 1;
+      bottom: 0;
+    }
   }
   .o-menu-item {
     height: 40px;
